@@ -1,6 +1,8 @@
 CHANGELOG Roundcube Webmail
 ===========================
 
+- Remove double borders in folder listing (#1487713)
+- Separate full message headers UI element from headers table (#1487715)
 - Add part MIME ID to message_part_* hooks (#1487718) 
 - Improve parsing of MS Outlook vCards (#1487716)
 - Updated PEAR::Net_Socket to 1.0.10
